[fix] Fix a bug of MTAppTabs
If You use TinyMCE as a fullscreen editor, the tabs appear above the editor.
TinyMCEをフルスクリーンモードで使うと、MTAppTabsのタブのラベルがエディタ上に重なってしまう不具合を解消。

--- a/MTAppjQuery/mt-static/plugins/MTAppjQuery/scss/MTAppjQuery.scss
+++ b/MTAppjQuery/mt-static/plugins/MTAppjQuery/scss/MTAppjQuery.scss
@@ -483,8 +483,13 @@ div.mtapp-sortable span.mtapp-linebreak-field-item {
     }
 }
 /* !MTAppTabs */
-body.mtapp-tabs div.mt-dialog {
-    z-index: 9999 !important;
+body{
+    &.fullscreen_editor_screen div.mtapp-tabs-container {
+        visibility: hidden !important;
+    }
+    &.mtapp-tabs div.mt-dialog {
+        z-index: 9999 !important;
+    }
 }
 div.mtapp-tabs-container {
     ul.mtapp-tabs-navi {
